@@ -1,33 +1,0 @@
-name: dataexplore
-version: 'latest'
-version-script: git describe --abbrev=1 --tags
-summary: data plotting and analysis package
-description: |
-  DataExplore is an open source desktop application for data analysis and plotting
-  intended for use in both research and education. The program allows quick
-  visualization of data, table manipulation tools and supports large data tables.
-
-grade: stable
-confinement: strict
-icon: snap/gui/icon.png
-
-apps:
-  dataexplore:
-    command: desktop-launch $SNAP/bin/dataexplore
-    plugs: [desktop,desktop-legacy,unity7,home]
-
-parts:
-  dataexplore:
-    plugin: python
-    python-version: python3
-    source: ../
-    stage-packages:
-      [python3-tk,xsel,fontconfig-config,fonts-freefont-ttf,ttf-ubuntu-font-family,
-      fonts-liberation,ttf-dejavu-core,ttf-mscorefonts-installer]
-    after: [desktop-glib-only]
-
-  files: #to deal with problem finding init.tcl
-    plugin: dump
-    source: /usr/share/tcltk/
-    organize:
-         '*': ./usr/lib/
